# web-downloader

./: .pre-commit-config.yaml  pyproject.toml
examples/: httpx-example.py  rich-example.py
